# oni-utility-suite

./: .gitignore  example_env  manage.py  package.json  pyproject.toml
ONI_Utility_Suite/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: admin.py  forms.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
accounts/fixtures/: manager_Abe.json
accounts/migrations/: 0001_initial.py
recipe_api/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
recipe_api/migrations/: 0001_initial.py  0002_alter_ingredientsmodel_ingredient_name_and_more.py  0003_ingredientsourcesmodel_unique_ingredient_source_and_more.py
static/css/: input.css  output.css
templates/: base.html
templates/accounts/: Dashboard.html  logged_out.html  login.html  password_change_done.html  password_change_form.html  profile.html  register.html
templates/recipe_api/: detailed_recipe.html  experimental.html  recipe_showcase.html  template.html
