[project]
name = "oni-utility-suite"
version = "0.1.0"
description = ""
authors = [
    {name = "KutologoJM",email = "kutologomashego@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.7,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
